<resources>
    <string name="app_name">神盾2017</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="flow_manage">流量管理</string>
    <string name="task_manage">任务管理</string>
    <string name="list_manage">名单管理</string>
    <string name="soft_manage">软件管理</string>
    <string name="net_control">上网监控</string>
    <string name="my_locatioin">我的位置</string>
    <string name="harass_intercept">骚扰拦截</string>
    <string name="net_work">网络</string>
    <string name="sus_window_clear">加速</string>
    <string name="unitMB">单位：MB</string>
    <string-array name="flow_warning">
        <item>提醒</item>
        <item>断网</item>
    </string-array>
    <string name="share_cancel">取消分享</string>
    <string name="share_tx_on">腾讯微博</string>
    <string name="share_sina_on">新浪微博</string>
    <string name="share_app">分享本应用</string>
    <string name="about_this_app">关于</string>
    <string name="talk_show">2017@追枫少年064</string>
    <string name="app_entrance_name">手机管家</string>
    <string name="flow_order_today">今日流量</string>
    <string name="flow_order_month">最近30天流量</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="select_time">选择时间</string>
    <string name="yes">添加</string>
    <string name="my_bottom">2017@追风少年064|版本:1.0</string>
    <string name="sus_window_back">返回</string>
    <string-array name="flow_unit">
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string name="flow_update">本月已用流量</string>
    <string name="flow_simple_unit">MB</string>
    <string name="net_name">应用</string>
    <string name="net_flow">数据</string>
    <string name="net_wifi">Wifi</string>
    <string name="fast_text">立即加速，让手机更快速</string>
    <string name="main_task_buntton_text">进程加速</string>
    <string name="main_trash_clean_button_text">垃圾清理</string>
    <string name="setting_yes">开启</string>
    <string name="setting_no">关闭</string>
    <string name="flow_manage_text_view">运营商的流量计算方式可能与本设备计算方式不同</string>
    <string name="model_normal">标准</string>
    <string name="modle_all_pass">全开</string>
    <string name="modle_all_harass">全拦</string>
    <string name="modle_whitepass_and_darkharass">仅拦黑名单和仅通白名单</string>
    <string name="modle_sight">情景模式</string>
    <string name="setting_aotu_open">开机自启</string>
    <string name="setting_float_window">显示悬浮窗</string>
    <string-array name="delete">
        <item>删除</item>
    </string-array>
    <string-array name="close">
        <item>关闭</item>
    </string-array>
    <string-array name="array_choice">
        <item>启动应用</item>
        <item>卸载应用</item>
        <item>查看详细信息</item>
    </string-array>
    <string-array name="array_time">
        <item>启用</item>
        <item>关闭</item>
        <item>删除</item>
        <item>详细名单</item>
    </string-array>
    <string-array name="message_list_item_handle">
        <item>删除</item>
        <item>恢复</item>
        <item>详细记录</item>
    </string-array>
    <string-array name="sensitive_item_handle">
        <item>编辑</item>
        <item>删除</item>
    </string-array>
    <string-array name="select_message_item_handle">
        <item>删除</item>
        <item>恢复</item>
    </string-array>
    <string name="delete_all_phone_harrass">清空</string>
    <string name="task_setting">锁屏清理进程</string>
    <string name="task_setting_yes">开启</string>
    <string name="task_setting_no">关闭</string>
    <string name="user_tasks">用户进程</string>
    <string name="system_tasks">系统进程</string>
    <string name="phone_harrass_recorder">电话拦截记录</string>
    <string name="message_harrass_recorder">短信拦截记录</string>
    <string name="message_state">拦截记录为空</string>
    <string name="delete_all_harrass">清空</string>
    <string name="recover_to_system">全部恢复</string>
    <string name="delete_selected_harrass">删除</string>
    <string name="recover_selected_system">恢复</string>
    <string name="message_white">仅过白名单</string>
    <string name="message_dark">仅拦黑名单</string>
    <string-array name="add_phone_to_dark_button_choice">
        <item>手动输入号码</item>
        <item>从联系人添加</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_harrass_manage">HarrassManageActivity</string>
    <string name="title_activity_flow_manage">FlowManageActivity</string>
</resources>