<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modle_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.slipwindow.ModleSelectActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">
        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/model_normal"/>
        <RadioButton
            android:id="@+id/radio_all_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modle_all_pass"/>
        <RadioButton
            android:id="@+id/radio_all_harass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modle_all_harass"/>
        <RadioButton
            android:id="@+id/radio_whitepass_darkharass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modle_whitepass_and_darkharass"/>
        <RadioButton
            android:id="@+id/radio_sight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modle_sight"/>
    </RadioGroup>

    <ListView
        android:id="@+id/sight_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:visibility="gone">
    </ListView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_sight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:src="@drawable/ic_action_add"/>

</RelativeLayout>
