<?xml version="1.0" encoding="utf-8"?><!--任务管理子项-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/pop_layout"
    android:background="@color/colorWhite"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/share_tx_image_view"
                    android:src="@drawable/share_tx_on"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/share_tx_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_tx_on"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/share_sina_image_view"
                    android:src="@drawable/share_tx_on"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/share_sina_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_sina_on"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <Button
        android:background="@color/colorWhite"
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_cancel"/>
</LinearLayout>