<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_net_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.slipwindow.NetControlActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/net_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_name"
                    android:background="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#fff"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_flow"
                    android:background="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#fff"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_wifi"
                    android:background="@color/colorPrimary"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="#fff"/>
            </RelativeLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/net_app_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/net_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



</RelativeLayout>
