<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.slipwindow.SettingActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/setting_float_window"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:gravity="right"
                android:text="@string/setting_float_window"
                android:textSize="20sp"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:switchMinWidth="20dp"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track"
                android:id="@+id/float_switch"
                android:textOn=""
                android:textOff=""
                android:textSize="20sp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7777"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"/>


        <Button
            android:id="@+id/share_app_button"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@android:color/transparent"
            android:gravity="left|center"
            android:text="@string/share_app"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#7777"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/about_app_button"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@android:color/transparent"
            android:gravity="left|center"
            android:text="@string/about_this_app"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </LinearLayout>
</RelativeLayout>
